Fri Jun 30 23:46:23 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: should test isinf for Solaris with GCC compiler.
	  [ruby-core:08100]

Fri Jun 30 19:35:41 2006  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils._escape): should
	  use String#ord to get ascii code from the one-character string.
	  [ruby-dev:28901]

Thu Jun 29 23:56:01 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (gc_mark_children): a bug in NODE_BLOCK_PASS marking.
	  [ruby-dev:28908]

Thu Jun 29 23:04:36 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y: use ARGSPUSH instead of ARGSCAT to prevent too much
	  splat expansion.

	* eval.c (when_check): need to handle ARGSPUSH as well.

	* eval.c (block_orphan): lambda and proc from method are always
	  orphan.

	* gc.c (gc_mark_children): proper marking for NODE_LAMBDA.

Thu Jun 29 22:47:30 2006  Tanaka Akira  <akr@m17n.org>

	* eval.c (SETUP_ARGS0): avoid GC problem.
	  [ruby-dev:28902]

Thu Jun 29 18:58:51 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_version): fix patch
	  failure.

Thu Jun 29 18:00:51 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c: add RDoc document.  a patch from
	  mathew <meta at pobox.com>.   [ruby-core:07050]

Wed Jun 28 14:53:09 2006  Eric Hodel  <drbrain@segment7.net>

	* lib/optparse.rb: RDoc patch from Robin Stocker <robin@nibor.org>
	  [ruby-core:08087]

Wed Jun 28 23:23:48 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_cstr_to_dbl): underscores should appear only
	  between digits.  [ruby-dev:28891]

Wed Jun 28 19:04:34 2006  Tanaka Akira  <akr@m17n.org>

	* test/socket/test_unix.rb: test_seqpacket_pair removed.
	  [ruby-dev:28846]

Wed Jun 28 13:51:21 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (when_check): arbitrary values are allowed after splats.
	  fixed: [ruby-dev:28879]
